Name:                SigFromNoise
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Jeremy Fitzhardinge
Maintainer:          jeremy@goop.org
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable SigFromNoise
  hs-source-dirs: src
  --main-is: Main.hs
  main-is: slurp.hs

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    heist >= 0.5 && < 0.6,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    snap == 0.4.*,
    snap-core == 0.4.*,
    snap-server == 0.4.*,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.3,
    xmlhtml == 0.1.*,
    hoauth >= 0.3.3,
    old-locale,
    aeson >= 0.2.0.1,
    network >= 2.3,
    containers >= 0.4.0.0,
    riak >= 0.2.0.0,
    base64-bytestring >= 0.1.0.2,
    wai >= 0.3.1,
    http-enumerator >= 0.3.1,
    enumerator >= 0.4.7,
    attoparsec-enumerator >= 0.2.0.3,
    monad-loops >= 0.3.1.1

  extensions: TypeSynonymInstances MultiParamTypeClasses OverloadedStrings

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

